--- a/shop.html
+++ b/shop.html
@@ -330,7 +330,7 @@
 
         async function updateCartCount() {
             try {
-                const res = await fetch(`http://localhost:3001/api/cart/${user.user_id}`);
+                const res = await fetch(`https://electro-mart-ecommerce-1.onrender.com/api/cart/${user.user_id}`);
                 const cartItems = await res.json();
                 const totalItems = cartItems.reduce((sum, item) => sum + item.quantity, 0);
                 cartCount.textContent = totalItems;
@@ -356,7 +356,7 @@
 
             try {
                 // Send filters to SERVER
-                const res = await fetch(`http://localhost:3001/api/products?search=${search}&category=${category}&sort=${sort}`);
+                const res = await fetch(`https://electro-mart-ecommerce-1.onrender.com/api/products?search=${search}&category=${category}&sort=${sort}`);
                 const products = await res.json();
                 
                 renderProducts(products);
@@ -481,7 +481,7 @@
             const fullAddress = `${shipName}, ${shipAddress}, Phone: ${shipPhone}`;
 
             try {
-                const response = await fetch('http://localhost:3001/api/create-order', {
+                const response = await fetch('https://electro-mart-ecommerce-1.onrender.com/api/create-order', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -538,7 +538,7 @@
             btn.disabled = true;
             btn.textContent = 'Adding...';
             try {
-                const response = await fetch('http://localhost:3001/api/cart/add', {
+                const response = await fetch('https://electro-mart-ecommerce-1.onrender.com/api/cart/add', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ userId: user.user_id, productId: product.product_id, quantity: 1 })
