--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             submitBtn.disabled = true;
 
             try {
-                const response = await fetch('http://localhost:3001/api/login', {
+                const response = await fetch('https://electro-mart-ecommerce-1.onrender.com/api/login', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ username, password })
@@ -338,7 +338,7 @@
             submitBtn.disabled = true;
 
             try {
-                const response = await fetch('http://localhost:3001/api/register', {
+                const response = await fetch('https://electro-mart-ecommerce-1.onrender.com/api/register', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ username, email, password, phone }) // Sending phone
