Add developer credits and attribution - Added footer with GitHub and LinkedIn links to all pages, updated README with author info, and added meta tags for SEO

--- a/shop.html
+++ b/shop.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Sanjay Yadav" />
+    <meta name="description" content="Shop Electronics at Electro-Mart. Developed by Sanjay Yadav" />
     <title>Electro-Mart | Shop</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -558,5 +560,22 @@
         fetchProducts();
     });
 </script>
+
+    <!-- Developer Credit Footer -->
+    <footer style="background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(10px); border-top: 1px solid rgba(148, 163, 184, 0.2); padding: 20px 0; text-align: center; margin-top: 60px;">
+        <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+            <p style="margin: 0; color: rgba(249, 250, 251, 0.6); font-size: 0.85rem; font-weight: 400;">
+                Developed with ❤️ by 
+                <a href="https://github.com/sanjayydv77" target="_blank" rel="noopener noreferrer" style="color: #60a5fa; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.color='#93c5fd'" onmouseout="this.style.color='#60a5fa'">Sanjay Yadav</a> 
+                <span style="color: rgba(249, 250, 251, 0.3); margin: 0 8px;">•</span> 
+                <span style="color: rgba(249, 250, 251, 0.4);">© 2026 Electro-Mart</span>
+            </p>
+            <p style="margin: 8px 0 0 0; color: rgba(249, 250, 251, 0.5); font-size: 0.75rem;">
+                <a href="https://github.com/sanjayydv77" target="_blank" rel="noopener noreferrer" style="color: rgba(249, 250, 251, 0.5); text-decoration: none; margin: 0 8px; transition: color 0.3s ease;" onmouseover="this.style.color='#60a5fa'" onmouseout="this.style.color='rgba(249, 250, 251, 0.5)'">GitHub</a>
+                <span style="color: rgba(249, 250, 251, 0.3);">|</span>
+                <a href="https://www.linkedin.com/in/sanjuydv7" target="_blank" rel="noopener noreferrer" style="color: rgba(249, 250, 251, 0.5); text-decoration: none; margin: 0 8px; transition: color 0.3s ease;" onmouseover="this.style.color='#0077b5'" onmouseout="this.style.color='rgba(249, 250, 251, 0.5)'">LinkedIn</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
