--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Sanjay Yadav" />
+    <meta name="description" content="Electro-Mart - Modern E-Commerce Platform for Electronics. Developed by Sanjay Yadav" />
     <title>Electro-Mart | Login & Register</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
@@ -361,5 +363,22 @@
             }
         });
     </script>
+    
+    <!-- Developer Credit Footer -->
+    <footer style="background: rgba(10, 14, 39, 0.6); backdrop-filter: blur(10px); border-top: 1px solid rgba(255, 255, 255, 0.08); padding: 20px 0; text-align: center; margin-top: 60px;">
+        <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+            <p style="margin: 0; color: rgba(255, 255, 255, 0.6); font-size: 0.85rem; font-weight: 400;">
+                Developed with ❤️ by 
+                <a href="https://github.com/sanjayydv77" target="_blank" rel="noopener noreferrer" style="color: #38bdf8; text-decoration: none; font-weight: 600; transition: all 0.3s ease;" onmouseover="this.style.color='#7dd3fc'" onmouseout="this.style.color='#38bdf8'">Sanjay Yadav</a> 
+                <span style="color: rgba(255, 255, 255, 0.3); margin: 0 8px;">•</span> 
+                <span style="color: rgba(255, 255, 255, 0.4);">© 2026 Electro-Mart</span>
+            </p>
+            <p style="margin: 8px 0 0 0; color: rgba(255, 255, 255, 0.5); font-size: 0.75rem;">
+                <a href="https://github.com/sanjayydv77" target="_blank" rel="noopener noreferrer" style="color: rgba(255, 255, 255, 0.5); text-decoration: none; margin: 0 8px; transition: color 0.3s ease;" onmouseover="this.style.color='#38bdf8'" onmouseout="this.style.color='rgba(255, 255, 255, 0.5)'">GitHub</a>
+                <span style="color: rgba(255, 255, 255, 0.3);">|</span>
+                <a href="https://www.linkedin.com/in/sanjuydv7" target="_blank" rel="noopener noreferrer" style="color: rgba(255, 255, 255, 0.5); text-decoration: none; margin: 0 8px; transition: color 0.3s ease;" onmouseover="this.style.color='#0077b5'" onmouseout="this.style.color='rgba(255, 255, 255, 0.5)'">LinkedIn</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
