--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
                         <p>Your Tech Superstore</p>
                     </div>
                 </div>
+                <div style="text-align: center; margin: 20px 0 10px 0; padding: 12px; background: rgba(56, 189, 248, 0.08); border-radius: 12px; border: 1px solid rgba(56, 189, 248, 0.2);">
+                    <p style="margin: 0; color: rgba(255, 255, 255, 0.7); font-size: 0.85rem; font-weight: 400;">
+                        🚀 Developed by <a href="https://github.com/sanjayydv77" target="_blank" rel="noopener noreferrer" style="color: #38bdf8; text-decoration: none; font-weight: 600;">Sanjay Yadav</a>
+                    </p>
+                </div>
                 <div class="features">
                     <div class="feature-item"><span class="feature-icon">🚀</span><span class="feature-text">Lightning Fast Shopping</span></div>
                     <div class="feature-item"><span class="feature-icon">🔒</span><span class="feature-text">Secure Transactions</span></div>
@@ -190,14 +195,14 @@
                                 <label>Username</label>
                                 <div class="input-wrapper">
                                     <span class="input-icon">👤</span>
-                                    <input type="text" class="form-input" id="login-username" placeholder="Enter your username" required />
+                                    <input type="text" class="form-input" id="login-username" placeholder="Enter your username" autocomplete="off" required />
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label>Password</label>
                                 <div class="input-wrapper">
                                     <span class="input-icon">🔐</span>
-                                    <input type="password" class="form-input" id="login-password" placeholder="Enter your password" required />
+                                    <input type="password" class="form-input" id="login-password" placeholder="Enter your password" autocomplete="off" required />
                                 </div>
                             </div>
                             <button type="submit" class="submit-btn">Sign In →</button>
@@ -214,14 +219,14 @@
                                 <label>Username</label>
                                 <div class="input-wrapper">
                                     <span class="input-icon">👤</span>
-                                    <input type="text" class="form-input" id="register-username" placeholder="Choose a username" required />
+                                    <input type="text" class="form-input" id="register-username" placeholder="Choose a username" autocomplete="off" required />
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label>Email</label>
                                 <div class="input-wrapper">
                                     <span class="input-icon">📧</span>
-                                    <input type="email" class="form-input" id="register-email" placeholder="Enter your email" required />
+                                    <input type="email" class="form-input" id="register-email" placeholder="Enter your email" autocomplete="off" required />
                                 </div>
                             </div>
                             
@@ -229,7 +234,7 @@
                                 <label>Phone Number</label>
                                 <div class="phone-group">
                                     <span class="country-code">+91</span>
-                                    <input type="tel" class="phone-input" id="register-phone" placeholder="98765 43210" maxlength="10" pattern="[0-9]{10}" required />
+                                    <input type="tel" class="phone-input" id="register-phone" placeholder="98765 43210" maxlength="10" pattern="[0-9]{10}" autocomplete="off" required />
                                 </div>
                             </div>
 
@@ -237,7 +242,7 @@
                                 <label>Password</label>
                                 <div class="input-wrapper">
                                     <span class="input-icon">🔐</span>
-                                    <input type="password" class="form-input" id="register-password" placeholder="Min 6 characters" required />
+                                    <input type="password" class="form-input" id="register-password" placeholder="Min 6 characters" autocomplete="new-password" required />
                                 </div>
                             </div>
                             <button type="submit" class="submit-btn">Create Account →</button>
@@ -373,10 +378,16 @@
                 <span style="color: rgba(255, 255, 255, 0.3); margin: 0 8px;">•</span> 
                 <span style="color: rgba(255, 255, 255, 0.4);">© 2026 Electro-Mart</span>
             </p>
-            <p style="margin: 8px 0 0 0; color: rgba(255, 255, 255, 0.5); font-size: 0.75rem;">
-                <a href="https://github.com/sanjayydv77" target="_blank" rel="noopener noreferrer" style="color: rgba(255, 255, 255, 0.5); text-decoration: none; margin: 0 8px; transition: color 0.3s ease;" onmouseover="this.style.color='#38bdf8'" onmouseout="this.style.color='rgba(255, 255, 255, 0.5)'">GitHub</a>
+            <p style="margin: 8px 0 0 0; color: rgba(255, 255, 255, 0.5); font-size: 0.75rem; display: flex; align-items: center; justify-content: center; gap: 12px;">
+                <a href="https://github.com/sanjayydv77" target="_blank" rel="noopener noreferrer" style="color: rgba(255, 255, 255, 0.5); text-decoration: none; display: inline-flex; align-items: center; gap: 6px; transition: color 0.3s ease;" onmouseover="this.style.color='#38bdf8'" onmouseout="this.style.color='rgba(255, 255, 255, 0.5)'">
+                    <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+                    GitHub
+                </a>
                 <span style="color: rgba(255, 255, 255, 0.3);">|</span>
-                <a href="https://www.linkedin.com/in/sanjuydv7" target="_blank" rel="noopener noreferrer" style="color: rgba(255, 255, 255, 0.5); text-decoration: none; margin: 0 8px; transition: color 0.3s ease;" onmouseover="this.style.color='#0077b5'" onmouseout="this.style.color='rgba(255, 255, 255, 0.5)'">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sanjuydv7" target="_blank" rel="noopener noreferrer" style="color: rgba(255, 255, 255, 0.5); text-decoration: none; display: inline-flex; align-items: center; gap: 6px; transition: color 0.3s ease;" onmouseover="this.style.color='#0077b5'" onmouseout="this.style.color='rgba(255, 255, 255, 0.5)'">
+                    <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/></svg>
+                    LinkedIn
+                </a>
             </p>
         </div>
     </footer>
