Add professional favicon to all pages for better brand visibility

--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Sanjay Yadav" />
     <meta name="description" content="Admin Dashboard - Electro-Mart. Developed by Sanjay Yadav" />
     <title>SANJU Admin Dashboard</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <style>
         /* [YOUR ORIGINAL DESIGN - KEPT EXACTLY THE SAME] */
