--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Sanjay Yadav" />
     <meta name="description" content="Electro-Mart - Modern E-Commerce Platform for Electronics. Developed by Sanjay Yadav" />
     <title>Electro-Mart | Login & Register</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
     <style>
