--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Sanjay Yadav" />
     <meta name="description" content="Shop Electronics at Electro-Mart. Developed by Sanjay Yadav" />
     <title>Electro-Mart | Shop</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
