--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Sanjay Yadav" />
     <meta name="description" content="Shopping Cart - Electro-Mart. Developed by Sanjay Yadav" />
     <title>SANJU Cart | Checkout</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
     <style>
