--- a/orders.html
+++ b/orders.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Sanjay Yadav" />
     <meta name="description" content="Order History - Electro-Mart. Developed by Sanjay Yadav" />
     <title>E-Commerce | My Orders</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
